--- a/heltfeil.html
+++ b/heltfeil.html
@@ -28,29 +28,23 @@
 
 		<link rel="stylesheet" href="standard.css" type="text/css"/>
 		<meta charset="utf-8">
-		<title>Ikke E-spor sin uoffisielle nettsidde </title>
+		<title>Noe interessant </title>
 </head>
 
 <body>
 
 <header id="bilde">
 
-	<a href="heltfeil.html">
-		<Center><img id="logo" src="ikkebra.jpg" alt="pedobear"/></a></Center>
+	
+		<Center><img id="wrong" src="wrong.jpg" alt="wrong"/></a></Center>
 
-
+<!-- HER ER DET IKKE MYE Å HENTE!! -->
 </header>
 	<hr>
 
 <section id="innhold">
 
-<div id="p1">
 
-			<p>Ikke e-spor sin uoffisielle nettside</p>
-			<p>Her er det absolutt  <a href="nestesteg.html"> </a> ikke noe interessant!!.</p>
-			
-		
-</div>
 
 </section>
 
