--- a/nestesteg.html
+++ b/nestesteg.html
@@ -28,15 +28,15 @@
 
 		<link rel="stylesheet" href="standard.css" type="text/css"/>
 		<meta charset="utf-8">
-		<title>Ikke E-spor sin uoffisielle nettsidde </title>
+		<title>Noe interessant </title>
 </head>
 
 <body>
 
 <header id="bilde">
 
-	<a href="heltfeil.html">
-		<Center><img id="logo" src="ikkebra.jpg" alt="pedobear"/></a></Center>
+	
+		<Center><img id="bilde1" src="bilde1.jpg" alt="bilde1"/></a></Center>
 
 
 </header>
@@ -46,8 +46,8 @@
 
 <div id="p1">
 
-			<p>Ikke e-spor sin uoffisielle nettside</p>
-			<p>Her er det absolutt  <a href="nestesteg.html"> </a> ikke noe interessant!!.</p>
+			<p>Kun et bilde av en glad student i Sauda</p>
+			
 			
 		
 </div>
